--- a/lab7/src/main/resources/templates/employees.html
+++ b/lab7/src/main/resources/templates/employees.html
@@ -43,17 +43,17 @@
                     <th>Zdjęcie</th>
                 </tr>
                    <tr th:each="prod,iterStat : ${employees}" th:classappend="${prod.dateOfTermination}? 'fired'">
-                    <td><span th:text='${iterStat.count}'></span></td>
-                    <td><span th:text='|${prod.lastName} ${prod.lastName}|'></span></td>
-                    <td><span th:text='${prod.jobTitle}'></span></td>
-                    <td><span th:text="${#numbers.formatDecimal(prod.salary,3,'WHITESPACE',2,'COMMA')}"></span></td>
-                    <td><span th:text="${#calendars.format(prod.dateOfEmployment,'dd.MM.yyyy')}"></span></td>
-                    <td><span th:text="${prod.dateOfTermination}? ${#dates.format(prod.dateOfTermination, 'dd.MM.yyyy')} : 'wciąż pracuje'"></span></td>
-                    <td><p th:each = "prod2, iterStat : ${prod.skills}">
-                            <span th:text="${prod2.name} + ' (' + ${prod2.level} + ')' + (${iterStat.last}? '' : ',')"></span></p></td>
+                    <td th:text='${iterStat.count}'></td>
+                    <td  th:text='|${prod.lastName} ${prod.lastName}|'></td>
+                    <td th:text='${prod.jobTitle}'></td>
+                    <td th:text="${#numbers.formatDecimal(prod.salary,3,'WHITESPACE',2,'COMMA')}"></td>
+                    <td th:text="${#calendars.format(prod.dateOfEmployment,'dd.MM.yyyy')}"></td>
+                    <td   th:text="${prod.dateOfTermination}? ${#dates.format(prod.dateOfTermination, 'dd.MM.yyyy')} : 'wciąż pracuje'"></td>
+                    <td><p th:each = "prod2, iterStat : ${prod.skills}" th:text="${prod2.name} + ' (' + ${prod2.level} + ')' + (${iterStat.last}? '' : ',')">
+                           </p></td>
                           
-                    <td><p th:each="prod3 : ${prod.comments}">
-                            <span th:text="${prod3}"></span></p></td>
+                    <td><p th:each="prod3 : ${prod.comments}" th:text="${prod3}">
+                           </p></td>
                     <td><img th:src="${prod.photoUrl}" class="empPhoto" src="http://via.placeholder.com/250x250"/></td>
                 </tr>
             </table>
